<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <item
        android:id="@+id/reset_item"
        android:title="@string/clear_values"
        app:showAsAction="never" />

    <item
        android:id="@+id/changelog_item"
        android:title="@string/whats_new"
        app:showAsAction="never" />

    <item
        android:id="@+id/rate_app_item"
        android:title="@string/rate_app"
        app:showAsAction="never" />

    <item
        android:id="@+id/privacy_policy_item"
        android:title="@string/privacy_policy"
        app:showAsAction="never" />

    <item
        android:id="@+id/info_item"
        android:title="@string/info"
        app:showAsAction="never" />
</menu>