<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".MainActivity"
    android:focusableInTouchMode="true"
    android:focusable="true"
    android:paddingTop="@dimen/defaultMargin"
    android:paddingStart="@dimen/defaultMargin"
    android:paddingEnd="@dimen/defaultMargin"
    android:clipChildren="false">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/calculateButton"
        android:layout_marginBottom="6dp"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/relativeLayout">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/balanceCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentPadding="6dp"
                android:elevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/balance"
                        android:textSize="24sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="10">

                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/balanceEditText"
                            android:inputType="numberSigned|numberDecimal"
                            android:layout_weight="10"/>
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/periodOfTimeCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/balanceCardView"
                android:elevation="8dp"
                app:contentPadding="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/period_of_time"
                        android:textSize="24sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="10">

                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/periodOfTimeEditText"
                            android:inputType="number"
                            android:layout_weight="7"/>

                        <Spinner
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/periodOfTimeSpinner"
                            android:layout_weight="3"/>
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/monthlyPaymentCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/periodOfTimeCardView"
                android:elevation="8dp"
                app:contentPadding="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:weightSum="10">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/monthly_payment"
                            android:textSize="24sp"
                            android:layout_weight="7"/>

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="3">

                            <Switch
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/monthlyPaymentSwitch"
                                android:checked="true"
                                android:layout_centerInParent="true"/>
                        </RelativeLayout>
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="10">

                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/monthlyPaymentEditText"
                            android:inputType="numberSigned|numberDecimal"
                            android:layout_weight="10"/>
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/annualInterestRateCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/monthlyPaymentCardView"
                android:elevation="8dp"
                app:contentPadding="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/annual_interest_rate"
                        android:textSize="24sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="10">

                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/annualInterestRateEditText"
                            android:inputType="numberDecimal"
                            android:layout_weight="7"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/percent_sign"
                            android:textAlignment="center"
                            android:textSize="24sp"
                            android:layout_weight="3"/>
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/interestCapitalizationCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/annualInterestRateCardView"
                android:elevation="8dp"
                app:contentPadding="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/interest_capitalization"
                        android:textSize="24sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="10">

                        <Spinner
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/interestCapitalizationSpinner"
                            android:layout_weight="10"/>
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/profitTaxCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/interestCapitalizationCardView"
                android:elevation="8dp"
                app:contentPadding="6dp"
                android:layout_marginBottom="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:weightSum="10">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/profit_tax"
                            android:textSize="24sp"
                            android:layout_weight="7" />

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="3">

                            <Switch
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/profitTaxSwitch"
                                android:checked="true"
                                android:layout_centerInParent="true"/>
                        </RelativeLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="10">

                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/profitTaxEditText"
                            android:text="@string/default_tax"
                            android:inputType="numberDecimal"
                            android:layout_weight="7"
                            android:imeOptions="actionDone"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/percent_sign"
                            android:textAlignment="center"
                            android:textSize="24sp"
                            android:layout_weight="3"/>
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </RelativeLayout>
    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/calculateButton"
        android:text="@string/calculate"
        android:layout_alignParentBottom="true"
        android:textSize="22dp"
        android:layout_marginBottom="@dimen/defaultMargin"/>

</RelativeLayout>